[gd_scene load_steps=10 format=3 uid="uid://bxa62sleh080"]

[ext_resource type="Script" path="res://Scripts/UI/Menus/SaveManagerMenu.gd" id="1_qkgto"]
[ext_resource type="Texture2D" uid="uid://cc0uxg71e5lu0" path="res://Assets/UI Sprites/ALL UI ASSETS on one sheet.png" id="2_33x7o"]
[ext_resource type="Texture2D" uid="uid://dfublfalq30f7" path="res://Assets/UI Sprites/Buttons/Icon Buttons/Icon Buttons Spritesheet.png" id="3_tfdu4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v0nhl"]
atlas = ExtResource("3_tfdu4")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_khpvg"]
atlas = ExtResource("3_tfdu4")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x83i6"]
atlas = ExtResource("3_tfdu4")
region = Rect2(0, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a53c3"]
atlas = ExtResource("3_tfdu4")
region = Rect2(32, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydln8"]
atlas = ExtResource("3_tfdu4")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3rve"]
atlas = ExtResource("2_33x7o")
region = Rect2(104, 152, 32, 32)

[node name="SaveManagerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qkgto")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="OptionContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.9
anchor_right = 0.8
anchor_bottom = 1.0
offset_top = -32.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="OptionContainer"]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="TextureButton" parent="OptionContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_v0nhl")
texture_pressed = SubResource("AtlasTexture_khpvg")
stretch_mode = 4

[node name="DeleteButton" type="TextureButton" parent="OptionContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_x83i6")
texture_pressed = SubResource("AtlasTexture_a53c3")
stretch_mode = 4

[node name="ReturnButton" type="TextureButton" parent="OptionContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_ydln8")
texture_pressed = SubResource("AtlasTexture_ydln8")
stretch_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_h3rve")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="SaveContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/SaveContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[connection signal="pressed" from="OptionContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="OptionContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="OptionContainer/HBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
